@@ -128,6 +128,9 @@
 #define GUI_APP_TIMER_SEND_FACEBOOK			GUI_APP_PLUGIN_ID + 109
 #define GUI_APP_PLAYER_END_REACHED			GUI_APP_PLUGIN_ID + 110
 
+#define GUI_APP_CONFIG_CHANGE_PATH			GUI_APP_PLUGIN_ID + 120
+#define GUI_APP_CONFIG_CHANGE_DB_UPDATE		GUI_APP_PLUGIN_ID + 121
+
 #define GUI_APP_SELECT_FOLDER				(GUI_APP_PLUGIN_ID + 200)
 #define GUI_APP_EMPTEY_SELECTION			(GUI_APP_PLUGIN_ID + 250)
 #define GUI_APP_SELECT_THIS_FOLDER			(GUI_APP_PLUGIN_ID + 251)
