@@ -16,6 +16,7 @@ Changelog 0.8.1.1
 [SA-00504] Sally: sort the apps in the apps selector by name
 [NO-TICKET] Many undocumented fixes and improvements
 [SA-00498] update dev Wiki
+[SA-00273] Sally: change the CONFIG_SAVED_MESSAGE message
 
 
 Changelog 0.8.0.6
